Added heading animations and text appearance animation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
   <body>
     <div class="header">
       <span class="header-container">
-        <h1>The CSS Showcase</h1>
-        <p>Here you can find some of the best CSS snippets and themes</p>
+        <h1 class="header-title">The CSS Showcase</h1>
+        <div class="text-container show">
+          <p class="first-text">
+            Here you can find some of the best CSS snippets and themes...
+          </p>
+          <p class="second-text">
+            ...the world has ever seen (from a beginner at least).
+          </p>
+        </div>
       </span>
     </div>
   </body>
